# EMProj_CMake

./: .gitignore  CMakeLists.txt  README.md  config.json  data.db  main.cpp  question_data.xlsx  resources.qrc
markdowns/: about.md
src/cpp/: appinfowidget.cpp  endwidget.cpp  introwidget.cpp  mainwidget.cpp  managementwidget.cpp  muteswitch.cpp  outrowidget.cpp  rulewidget.cpp  templatewidget.cpp
src/cpp/backends/: audios.cpp  database.cpp  questionbackend.cpp
src/cpp/elements/: gamemodechooser.cpp  muteswitch.cpp  optionbutton.cpp
src/cpp/utilities/: database.cpp  fileread.cpp
src/cpp/widget_containers/: mainwidget.cpp  managementwidget.cpp  outrowidget.cpp
src/cpp/widgets/: appinfowidget.cpp  endwidget.cpp  introwidget.cpp  rulewidget.cpp  templatewidget.cpp
src/css/: gamemodechooser.css  intro.css  option.css  outro.css  questioning.css
src/headers/: appinfowidget.hpp  endwidget.hpp  introwidget.hpp  mainwidget.hpp  managementwidget.hpp  outrowidget.hpp  rulewidget.hpp  templatewidget.hpp
src/headers/backends/: audios.hpp  database.hpp  questionbackend.hpp
src/headers/elements/: gamemodechooser.hpp  muteswitch.hpp  optionbutton.hpp
src/headers/utilities/: database.hpp  defines.hpp  fileread.hpp  questiondata.hpp  result.hpp
src/headers/widget_containers/: mainwidget.hpp  managementwidget.hpp  outrowidget.hpp
src/headers/widgets/: endwidget.hpp  introwidget.hpp  rulewidget.hpp  templatewidget.hpp
src/ui/: appinfowidget.ui  endwidget.ui  introwidget.ui  managementwidget.ui  rulewidget.ui  template.ui
